* 8 new talents * New mob effect: Electrocuted. It is applied to creatures struck by lightning. Delas periodical damage and interrupts target's actions * Tooltips of Aura Casters and Spell Casters now adjust according to changes to their range, recharge, etc. * Custom reloadable data driven objects have moved to data/fantazia/fantazia folder, where healing_type folder lies